# Python-demoparser

./: .gitignore  .~lock.data.csv#  .~lock.kills.csv#  1.dem.npy  Cargo.toml  bitbuf.rs  compile-proto.sh  genproto.py  kill_coordinates.py  main.py  main2.cpp  main2.py  mp.py  parser.py  pp  pp.rs  pyproject.toml  readme.md  setup.py  sums.pkl  test  test.py  test.txt  v.txt  vars.md  vars.txt  xx.rs
.github/workflows/: ci.yml  publish.yml  python-app.yml
benchmarks/coordinates/demoinfocs-golang/: main.go
benchmarks/coordinates/this_parser/: main.py
benchmarks/list_kills/awpy/: main.py
benchmarks/list_kills/demoinfocs-golang/: go.mod  go.sum  main.go
benchmarks/list_kills/this_parser/: main.py
benchmarks/random_coordinates/demoinfocs-golang/: main.go
benchmarks/random_coordinates/this_parser/: main.py
csgoproto/src/: cstrike15_gcmessages.rs  lib.rs  netmessages.rs
examples/: find_epic_clip.py  first_blood.py  first_kill_or_death.py  graph.py  kill_coordinates.py  moving_shots.py  pyparser.py  readme.md  util_dmg.py
examples/afk_teammate/: afk_teammate.py  afk_teammate_parallel.py  readme.md
examples/crosshair_codes/: collect_crosshairs.py  collect_crosshairs_parallel.py  readme.md
examples/find_all_aces/: find_epic_kill.py  find_epic_kill_parallel.py  readme.md
examples/game_events_to_sql/: fetch_from_db.py  readme.md  to_sql.py
examples/he_damage/: he_damage.py  he_damage_parallel.py  readme.md
examples/list_all_event_names/: all_names.py  all_names_parallel.py
examples/number_of_teamflashes/: bad_teammate.py
examples/per_round_stats/: readme.md  round_stats.py  round_stats_parallel.py
examples/player_coordinates/: coordinates.py  coordinates_parallel.py
examples/team_flashes/: team_flashbang.py  team_flashbang_parallel.py
hextraining/: main  main.py  main.rs
python_src/: events.html  hurtevents.py  main.py
src/: data_table.rs  entities.rs  extract_props.rs  game_events.rs  header.rs  lib.rs  main.rs  parsing.rs  read_bits.rs  read_bytes.rs  readme.md  setup.py  stringtables.rs
src/parsing/: cache.rs  collect_data.rs  columnmapper.rs  create_output.rs  data_table.rs  demo_parsing.rs  entities.rs  extract_props.rs  game_events.rs  header.rs  newbitreader.rs  parser.rs  parser_settings.rs  players.rs  read_bits.rs  read_bits_old.rs  read_bits_skip.rs  read_bytes.rs  stringtables.rs  tick_cache.rs  tick_cacher.rs  type_hm.rs  utils.rs  variants.rs
src/parsing/cache/: cache_algorithms.rs  cache_reader.rs  cache_writer.rs  readme.md
src/parsing/create_output/: create_output.rs  game_events.rs  packet_ents.rs
src/parsing/demo_parsing/: collect_data.rs  data_table.rs  entities.rs  read_bits.rs  (+4 more)
src/tests/: demo_parser.py  gen_test.py  parser_test.py  t.py
test/: consts.py  main.py  main.rs
testing/: Cargo.toml
testing/src/: main.rs
tests/: gen_test.py  parser_test.py  sums.pkl
tests/correct_outputs/: header.pkl  players.pkl
tests/gen_go_out/: go.mod  go.sum  main.go
(+2 files in other folders)
