[package]
name = "demoparser"
version = "0.3.0"
edition = "2021"

[lib]
name = "demoparser"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.17", features = ["extension-module"] }
bitreader = "0.3.6"
protobuf = "3.1.0"
numpy = "0.17.1"
fxhash = "0.2.1"
flate2 = "1.0.24"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
ndarray = "0.15.6"
polars = { version = "0.24.3", features = ["diagonal_concat"]}
polars-arrow = "0.24.3"
csv = "1.1"
phf = { version = "0.11", features = ["macros"] }
mimalloc = { version = "*", default-features = false }
ahash = "0.8.0"
smallvec = "1.10.0"
bitter = "0.6.0"
memmap2 = "0.5.7"
rayon = "1.6.0"
threadpool = "1.8.1"
dashmap = "5.4.0"
varint-simd = "0.3.0"
crossbeam = "0.8.2"
crossbeam-queue = "0.3.8"

[dependencies.csgoproto]
path = "src/parsing/csgoproto"
[target.'cfg(not(target_env = "msvc"))'.dependencies]


[profile.dev]

[profile.release]
opt-level = 3
#lto = "fat"
#codegen-units = 1
panic = "abort"
#debug = true
